# ansible-magicmirror

./: .gitignore  README.md  localhost.yml  pi_hosts.yml  pyproject.toml  site.yml
roles/docker-ce/tasks/: main.yml
roles/magicmirror/defaults/: main.yml
roles/magicmirror/tasks/: main.yml  start.yml  stop.yml
roles/magicmirror/templates/: config.js.j2  custom.css.j2
