[tool.poetry]
name = "ansible-magicmirror"
version = "1.0.0"
description = ""
authors = ["Tatsuma Matsuki <tatsuma.matsuki@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
ansible = "^2.9.10"
jinja2 = "^2.11.2"
pyyaml = "^5.3.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
